kubernetes/release/logcollector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: daedalus-project-docs
  name: daedalus-project-docs-logcollector
  labels:
    app: daedalus-project-docs-logcollector
spec:
  selector:
    matchLabels:
      app: tdagent
      role: logcollector
  replicas: 1
  template:
    metadata:
      labels:
        app: tdagent
        role: logcollector
    spec:
      containers:
      - name: logcollector
        image: daedalusproject/daedalus-project-docs-logcollector:__IMAGE_TAG__
        resources:
          limits:
            cpu: 80m
            memory: 120Mi
          requests:
            cpu: 80m
            memory: 120Mi
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9880
        volumeMounts:
        - name: logcollector-config
          mountPath: /etc/td-agent/
          readOnly: true
      volumes:
      - name: logcollector-config
        secret:
          secretName: logcollector-config
      terminationGracePeriodSeconds: 160
